change schemas to dto
